fixed spacing

--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ h1 {
   background-color: rgb(220,220,221);
   border: 2px solid rgb(197,195,198);
   border-radius: 10px;
-  width: 350px;
+  width: 360px;
   color: rgb(70,73,76);
 }
 
